Prevent word wrap inside buttons

--- a/src/styles/CtaBtn.module.css
+++ b/src/styles/CtaBtn.module.css
@@ -7,6 +7,7 @@
   width: fit-content;
   font-weight: bold;
   transition: all 150ms;
+  width: fit-content;
 }
 
 .ctaBtn:hover {
