--- a/src/styles/LinksSection.module.css
+++ b/src/styles/LinksSection.module.css
@@ -2,6 +2,7 @@
   display: flex;
   gap: 1em;
   margin-top: 1em;
+  flex-wrap: wrap;
 }
 
 .linksHeading {
